--- a/Profiles.conf
+++ b/Profiles.conf
@@ -69,6 +69,7 @@ dl.l.google.com = server:119.29.29.29
 [Proxy Group]
 SpeedTest = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
 节点策略 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
+手动选择 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 苹果服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 国内服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
 广告拦截 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
@@ -95,6 +96,7 @@ Emby = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Ko
 越南 = NameRegex, FilterKey = "(?=.*(越|VN|(?i) Việt Nam|Hà|Hồ|🇻🇳))^((?!(台|日|韩|新|美)).)*$"
 美国 = NameRegex, FilterKey = "(?=.*(美|US|🇺🇸|(?i)States|American))^((?!(港|台|日|韩|新)).)*$"
 国际 = NameRegex, FilterKey = "(?=.*)^((?!(港|HK|日|JP|台|TW|越|VN|新|SG|美|US|🇨🇳|🇭🇰|🇺🇸|🇯🇵|🇻🇳|🇸🇬)).)*$"
+手动选择 = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
 
 
 
