--- a/Profiles.conf
+++ b/Profiles.conf
@@ -96,7 +96,7 @@ Emby = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Ko
 越南 = NameRegex, FilterKey = "(?=.*(越|VN|(?i) Việt Nam|Hà|Hồ|🇻🇳))^((?!(台|日|韩|新|美)).)*$"
 美国 = NameRegex, FilterKey = "(?=.*(美|US|🇺🇸|(?i)States|American))^((?!(港|台|日|韩|新)).)*$"
 国际 = NameRegex, FilterKey = "(?=.*)^((?!(港|HK|日|JP|台|TW|越|VN|新|SG|美|US|🇨🇳|🇭🇰|🇺🇸|🇯🇵|🇻🇳|🇸🇬)).)*$"
-手动选择 = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
+所有 = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
 
 
 
