--- a/Profiles.conf
+++ b/Profiles.conf
@@ -79,12 +79,12 @@ Emby = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Ko
 国际社交 = select,节点策略,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
 国外媒体 = select,节点策略,狮城节点,香港节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 全球加速 = select,节点策略,狮城节点,香港节点,美国节点,img-url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
-香港节点 = select,香港,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾节点 = select,台湾,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-狮城节点 = select,狮城,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-越南节点 = select,越南,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/VN.png
-日本节点 = select,日本,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-美国节点 = select,美国,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+香港节点 = url-test,香港,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾节点 = url-test,台湾,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+狮城节点 = url-test,狮城,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+越南节点 = url-test,越南,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/VN.png
+日本节点 = url-test,日本,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+美国节点 = url-test,美国,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 黑白名单 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 
