--- a/Profiles.conf
+++ b/Profiles.conf
@@ -67,8 +67,8 @@ dl.l.google.com = server:119.29.29.29
 
 
 [Proxy Group]
-SpeedTest = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
-节点策略 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
+SpeedTest = select,ALL,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
+节点策略 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
 手动选择 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 苹果服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 国内服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
@@ -85,7 +85,7 @@ Emby = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Ko
 越南节点 = url-test,越南,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/VN.png
 日本节点 = url-test,日本,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 美国节点 = url-test,美国,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-黑白名单 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+FINAL = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 
 [Remote Filter]
@@ -96,7 +96,7 @@ Emby = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Ko
 越南 = NameRegex, FilterKey = "(?=.*(越|VN|(?i) Việt Nam|Hà|Hồ|🇻🇳))^((?!(台|日|韩|新|美)).)*$"
 美国 = NameRegex, FilterKey = "(?=.*(美|US|🇺🇸|(?i)States|American))^((?!(港|台|日|韩|新)).)*$"
 国际 = NameRegex, FilterKey = "(?=.*)^((?!(港|HK|日|JP|台|TW|越|VN|新|SG|美|US|🇨🇳|🇭🇰|🇺🇸|🇯🇵|🇻🇳|🇸🇬)).)*$"
-所有 = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
+ALL = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
 
 
 
@@ -128,7 +128,7 @@ https://gaoyifan.github.io/china-operator-ip/chinanet6.txt, policy=国内服务,
 
 [Rule]
 GEOIP,CN,国内服务
-FINAL,黑白名单
+FINAL,FINAL
 
 [URL Rewrite]
 enable = false
