--- a/Profiles.conf
+++ b/Profiles.conf
@@ -69,7 +69,7 @@ dl.l.google.com = server:119.29.29.29
 [Proxy Group]
 SpeedTest = select,ALL,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
 节点策略 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
-手动选择 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
+手动选择 = select,ALL,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 苹果服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 国内服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
 广告拦截 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
