--- a/Profiles.conf
+++ b/Profiles.conf
@@ -67,18 +67,18 @@ dl.l.google.com = server:119.29.29.29
 
 
 [Proxy Group]
-SpeedTest = select,ALL,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
-节点策略 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
-手动选择 = select,ALL,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
-苹果服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-国内服务 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
-广告拦截 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
-TikTok换区 = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
-Google Voice = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/GV.png
-Emby = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
-国际社交 = select,节点策略,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
-国外媒体 = select,节点策略,狮城节点,香港节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-全球加速 = select,节点策略,狮城节点,香港节点,美国节点,img-url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
+SpeedTest = select,手动选择,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
+节点策略 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
+手动选择 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
+苹果服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+国内服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
+广告拦截 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
+TikTok换区 = select,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
+Google Voice = select,ALL,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/GV.png
+Emby = select,DIRECT,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
+国际社交 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
+国外媒体 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+全球加速 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
 香港节点 = url-test,香港,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 台湾节点 = url-test,台湾,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 狮城节点 = url-test,狮城,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
