--- a/Profiles.conf
+++ b/Profiles.conf
@@ -75,7 +75,7 @@ SpeedTest = select,手动选择,img-url = https://raw.githubusercontent.com/Soft
 广告拦截 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 TikTok换区 = select,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
 Google Voice = select,ALL,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/GV.png
-Emby = select,DIRECT,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
+Emby = select,DIRECT,手动选择,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 国际社交 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
 国外媒体 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 全球加速 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
