--- a/Profiles.conf
+++ b/Profiles.conf
@@ -85,7 +85,7 @@ Emby = select,DIRECT,手动选择,香港节点,日本节点,美国节点,img-url
 越南节点 = url-test,越南,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/VN.png
 日本节点 = url-test,日本,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 美国节点 = url-test,美国,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-FINAL = select,DIRECT,节点策略,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+FINAL = select,节点策略,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 
 [Remote Filter]
