--- a/Profiles.conf
+++ b/Profiles.conf
@@ -14,23 +14,25 @@
 # 请使用 Safari 浏览器访问 https://cdn.jsdelivr.net/gh/nondanee/UnblockNeteaseMusic@master/ca.crt 。首先下载证书, 进入「设置」>「通用」>「描述文件」, 安装「UnblockNeteaseMusic Root CA」, 并在「设置」>「通用」>「关于本机」>「证书信任设置」开启对「UnblockNeteaseMusic Root CA」的信任。
 
 [General]
+doh-server = https://doh.pub/dns-query,https://dns.alidns.com/dns-query,https://1.12.12.12/dns-query,https://120.53.53.53/dns-query,https://223.5.5.5/dns-query,https://223.6.6.6/dns-query
 # IPv6 支持
-ipv6 = false
+ipv6 = true
 # > 跳过某个域名或者IP段
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, passenger.t3go.cn,passenger.t3go.cn
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,passenger.t3go.cn,passenger.t3go.cn
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
-dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
+dns-server = system,119.29.29.29,223.5.5.5,223.6.6.6,8.8.8.8,8.8.4.4,1.1.1.1,1.0.0.1
 # Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
-allow-udp-proxy = false
+allow-udp-proxy = true
 allow-wifi-access = false
 wifi-access-http-port = 7222
-wifi-access-socket5-port = 7221
+wifi-access-socks5-port = 7221
 # > 代理测速 URL
 proxy-test-url = http://www.gstatic.com/generate_204
 # > 测速超时 (s)
 test-timeout = 5
+interface-mode = auto
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 # 解析器
@@ -63,28 +65,50 @@ dl.l.google.com = server:119.29.29.29
 [Proxy]
 
 [Remote Proxy]
-机场订阅 = https://suo.yt/W7BkpTS
 
 
 [Proxy Group]
-SpeedTest = select,手动选择,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
+# 节点策略
 节点策略 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
 手动选择 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
-苹果服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-国内服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
+
+# 自动策略组
+自动选择(延迟优选) = url-test,游戏节点,香港节点,台湾节点,日本节点,韩国节点,美国节点,泰国节点,英国节点,印度节点,法国节点,德国节点,荷兰节点,南非节点,新加坡节点,菲律宾节点,加拿大节点,俄罗斯节点,阿根廷节点,土耳其节点,爱尔兰节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = goforward
+自动选择(故障转移) = fallback,游戏节点,香港节点,台湾节点,日本节点,韩国节点,泰国节点,美国节点,英国节点,印度节点,法国节点,德国节点,荷兰节点,新加坡节点,南非节点,菲律宾节点,加拿大节点,俄罗斯节点,阿根廷节点,土耳其节点,爱尔兰节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = gobackward
+自动选择(负载均衡) = load-balance,游戏节点,香港节点,台湾节点,日本节点,韩国节点,泰国节点,美国节点,英国节点,印度节点,法国节点,德国节点,荷兰节点,南非节点,新加坡节点,菲律宾节点,加拿大节点,俄罗斯节点,阿根廷节点,土耳其节点,爱尔兰节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = repeat
+
+SpeedTest = select,手动选择,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/Policy/Speedtest.png
 广告拦截 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
+Emby = select,DIRECT,手动选择,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 TikTok换区 = select,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
 Google Voice = select,ALL,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/GV.png
-Emby = select,DIRECT,手动选择,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 国际社交 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
 国外媒体 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-全球加速 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
-香港节点 = url-test,香港,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾节点 = url-test,台湾,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-狮城节点 = url-test,狮城,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-越南节点 = url-test,越南,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/VN.png
-日本节点 = url-test,日本,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-美国节点 = url-test,美国,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+全球加速 = select,节点策略,香港节点,日本节点,美国节点,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/wukong.png
+苹果服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+国内服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
+
+# 香港策略组
+香港(延迟优选) = url-test,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+香港(故障转移) = fallback,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+香港(负载均衡) = load-balance,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+
+# 台湾策略组
+台湾(延迟优选) = url-test,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
+台湾(故障转移) = fallback,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
+台湾(负载均衡) = load-balance,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
+
+# 日本策略组
+日本(延迟优选) = url-test,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+日本(故障转移) = fallback,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+日本(负载均衡) = load-balance,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+
+# 美国策略组
+美国(延迟优选) = url-test,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+美国(故障转移) = fallback,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+美国(负载均衡) = load-balance,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+
+
 FINAL = select,节点策略,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 
@@ -92,8 +116,6 @@ FINAL = select,节点策略,DIRECT,img-url = https://raw.githubusercontent.com/O
 香港 = NameRegex, FilterKey = "(?=.*(港|HK|🇭🇰|(?i)Hong))^((?!(台|日|韩|新|美)).)*$"
 台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
 日本 = NameRegex, FilterKey = "(?=.*(日|JP|🇯🇵|(?i)Japan))^((?!(港|台|韩|新|美|利亚)).)*$"
-狮城 = NameRegex, FilterKey = "(?=.*(新|狮|獅|SG|🇸🇬|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$"
-越南 = NameRegex, FilterKey = "(?=.*(越|VN|(?i) Việt Nam|Hà|Hồ|🇻🇳))^((?!(台|日|韩|新|美)).)*$"
 美国 = NameRegex, FilterKey = "(?=.*(美|US|🇺🇸|(?i)States|American))^((?!(港|台|日|韩|新)).)*$"
 国际 = NameRegex, FilterKey = "(?=.*)^((?!(港|HK|日|JP|台|TW|越|VN|新|SG|美|US|🇨🇳|🇭🇰|🇺🇸|🇯🇵|🇻🇳|🇸🇬)).)*$"
 ALL = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
