--- a/Profiles.conf
+++ b/Profiles.conf
@@ -69,13 +69,13 @@ dl.l.google.com = server:119.29.29.29
 
 [Proxy Group]
 # 节点策略
-节点策略 = select,香港节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
+节点策略 = select,香港节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Rocket.png
 手动选择 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 
 # 自动策略组
-自动选择(延迟优选) = url-test,游戏节点,香港节点,台湾节点,日本节点,韩国节点,美国节点,泰国节点,英国节点,印度节点,法国节点,德国节点,荷兰节点,南非节点,新加坡节点,菲律宾节点,加拿大节点,俄罗斯节点,阿根廷节点,土耳其节点,爱尔兰节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = goforward
-自动选择(故障转移) = fallback,游戏节点,香港节点,台湾节点,日本节点,韩国节点,泰国节点,美国节点,英国节点,印度节点,法国节点,德国节点,荷兰节点,新加坡节点,南非节点,菲律宾节点,加拿大节点,俄罗斯节点,阿根廷节点,土耳其节点,爱尔兰节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = gobackward
-自动选择(负载均衡) = load-balance,游戏节点,香港节点,台湾节点,日本节点,韩国节点,泰国节点,美国节点,英国节点,印度节点,法国节点,德国节点,荷兰节点,南非节点,新加坡节点,菲律宾节点,加拿大节点,俄罗斯节点,阿根廷节点,土耳其节点,爱尔兰节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = repeat
+自动选择(延迟优选) = url-test,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = goforward
+自动选择(故障转移) = fallback,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = gobackward
+自动选择(负载均衡) = load-balance,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = repeat
 
 SpeedTest = select,手动选择,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/Policy/Speedtest.png
 广告拦截 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
@@ -88,22 +88,22 @@ Google Voice = select,ALL,img-url = https://raw.githubusercontent.com/Softlyx/Qu
 苹果服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 国内服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
 
-# 香港策略组
+# 香港节点
 香港(延迟优选) = url-test,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
 香港(故障转移) = fallback,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
 香港(负载均衡) = load-balance,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
 
-# 台湾策略组
+# 台湾节点
 台湾(延迟优选) = url-test,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
 台湾(故障转移) = fallback,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
 台湾(负载均衡) = load-balance,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
 
-# 日本策略组
+# 日本节点
 日本(延迟优选) = url-test,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
 日本(故障转移) = fallback,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
 日本(负载均衡) = load-balance,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
 
-# 美国策略组
+# 美国节点
 美国(延迟优选) = url-test,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
 美国(故障转移) = fallback,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
 美国(负载均衡) = load-balance,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
