--- a/Profiles.conf
+++ b/Profiles.conf
@@ -73,9 +73,9 @@ dl.l.google.com = server:119.29.29.29
 手动选择 = select,ALL,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available_1.png
 
 # 自动策略组
-自动选择(延迟优选) = url-test,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = goforward
-自动选择(故障转移) = fallback,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = gobackward
-自动选择(负载均衡) = load-balance,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = repeat
+延迟优选 = url-test,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = goforward
+故障转移 = fallback,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = gobackward
+负载均衡 = load-balance,香港节点,台湾节点,日本节点,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = repeat
 
 SpeedTest = select,手动选择,img-url = https://raw.githubusercontent.com/Softlyx/QuantumultX/main/icon/Policy/Speedtest.png
 广告拦截 = select,REJECT,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
@@ -89,24 +89,16 @@ Google Voice = select,ALL,img-url = https://raw.githubusercontent.com/Softlyx/Qu
 国内服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
 
 # 香港节点
-香港(延迟优选) = url-test,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
-香港(故障转移) = fallback,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
-香港(负载均衡) = load-balance,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+香港节点 = url-test,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
 
 # 台湾节点
-台湾(延迟优选) = url-test,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
-台湾(故障转移) = fallback,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
-台湾(负载均衡) = load-balance,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
+台湾节点 = url-test,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
 
 # 日本节点
-日本(延迟优选) = url-test,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
-日本(故障转移) = fallback,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
-日本(负载均衡) = load-balance,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+日本节点 = url-test,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
 
 # 美国节点
-美国(延迟优选) = url-test,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
-美国(故障转移) = fallback,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
-美国(负载均衡) = load-balance,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,max-timeout = 3000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+美国节点 = url-test,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
 
 
 FINAL = select,节点策略,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
