--- a/Profiles.conf
+++ b/Profiles.conf
@@ -89,16 +89,16 @@ Google Voice = select,ALL,img-url = https://raw.githubusercontent.com/Softlyx/Qu
 国内服务 = select,DIRECT,REJECT,节点策略,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
 
 # 香港节点
-香港节点 = url-test,香港节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
+香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Hong_Kong.png
 
 # 台湾节点
-台湾节点 = url-test,台湾节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
+台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Taiwan.png
 
 # 日本节点
-日本节点 = url-test,日本节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
+日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/Japan.png
 
 # 美国节点
-美国节点 = url-test,美国节点,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
+美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 60,img-url = https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Rounded_Rectangle/United_States.png
 
 
 FINAL = select,节点策略,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
