--- a/Profiles.conf
+++ b/Profiles.conf
@@ -105,10 +105,10 @@ FINAL = select,节点策略,DIRECT,img-url = https://raw.githubusercontent.com/O
 
 
 [Remote Filter]
-香港 = NameRegex, FilterKey = "(?=.*(港|HK|🇭🇰|(?i)Hong))^((?!(台|日|韩|新|美)).)*$"
-台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
-日本 = NameRegex, FilterKey = "(?=.*(日|JP|🇯🇵|(?i)Japan))^((?!(港|台|韩|新|美|利亚)).)*$"
-美国 = NameRegex, FilterKey = "(?=.*(美|US|🇺🇸|(?i)States|American))^((?!(港|台|日|韩|新)).)*$"
+香港 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
+台湾 = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
+日本 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
+美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
 国际 = NameRegex, FilterKey = "(?=.*)^((?!(港|HK|日|JP|台|TW|越|VN|新|SG|美|US|🇨🇳|🇭🇰|🇺🇸|🇯🇵|🇻🇳|🇸🇬)).)*$"
 ALL = NameRegex, FilterKey = "(?=.*)^((?!网易).)*$"
 
